# raisin

./: .ccls  .clang-format  .clang-tidy  .cz.toml  .gitignore  .hadolint.yaml  .pre-commit-config.yaml  .vimspector.json  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  block.plist  conanfile.txt  default.nix  docker-compose.yml  flake.nix
cfg-clang/: Makefile
cfg-clang/src/: main.cpp
cfg-clang/tests/: 01.syntax.cpp
cmake/: Conan.cmake  Latex.cmake
doc/: Documentation.md  raisin.drawio
doc/adr/: .adr-dir
doc/adr/result-return/: 0001-record-architecture-decisions.md
icon/: CMakeLists.txt  icon.tex
src/: CMakeLists.txt  ast_processor.cpp  ast_processor.hpp  bloc.hpp  cfg.cpp  cfg.hpp  cfg_block.cpp  cfg_block.hpp  cfg_builder.cpp  cfg_builder.hpp  cfg_element.cpp  cfg_element.hpp  cfg_scope.cpp  cfg_scope.hpp  disable_warnings.hpp  element.hpp  main.cpp
src/app/cqrs/: event-store.cpp  event-store.hpp  icqrs.hpp
src/domain/: iprogram.hpp  irepository.hpp  irepostory.hpp  language.cpp  language.hpp  program.cpp  program.hpp
src/domain/cfg/: block.cpp  block.hpp  builder.cpp  cfg-builder.cpp  cfg.cpp  cfg.hpp  cfg_builder.cpp  compound_statement.cpp  compound_statement.hpp  element.cpp  element.hpp  icfg.hpp  scope.cpp  scope.hpp  statement.cpp  statement.hpp
src/domain/cfg/block/: block.cpp  block.hpp  builder.cpp  iblock.hpp
src/domain/cfg/element/: element.cpp  element.hpp  ielement.hpp
src/domain/cfg/scope/: builder.cpp  iscope.hpp  scope.cpp  scope.hpp
src/domain/core/: aggregator.hpp  compositor.hpp  core.hpp  failure-registrar.hpp  guard.cpp  guard.hpp  result.hpp  types.cpp  types.hpp
src/domain/factories/cfg/: wip_block.cpp  wip_block.hpp  wip_cfg.cpp  wip_cfg.hpp  wip_element.cpp  wip_element.hpp  wip_scope.cpp  wip_scope.hpp
src/domain/factories/cpp/: ast_processor.cpp  ast_processor.hpp  cfg_builder.cpp  cfg_builder.hpp  wip_element.cpp  wip_element.hpp
src/domain/factories/lang/cpp/: ast_processor.cpp  cfg_builder.cpp  cfg_builder.hpp
src/domain/file/: code.cpp  code.hpp  directory.cpp  directory.hpp  file.cpp  file.hpp
src/infra/adapters/: iservice.hpp
src/infra/adapters/config/: iconfig-service.hpp  iconfig.hpp
src/infra/adapters/filesystem/: file-reader.cpp  file-reader.hpp
src/infra/adapters/parsers/clang/: ast_processor.cpp  ast_processor.hpp  cfg_factory.cpp  cfg_factory.hpp  clang-paser.hpp  iclang-parser.hpp
src/infra/adapters/parsers/files/: file-parser.hpp
src/infra/adapters/uml/: iuml-paser.hpp
src/infra/repositories/: repository-in-memory.hpp
src/infra/services/: iservice.hpp
src/infra/services/cfg/: cfg-parser-clang.hpp  icfg-parser.hpp
src/infra/services/config/: iconfig-service.hpp  iconfig.hpp
src/infra/services/parsers/clang/: ast_processor.cpp  ast_processor.hpp  cfg_factory.cpp  cfg_factory.hpp  clang-paser.hpp  clang_parser.cpp  clang_paser.hpp  iclang-parser.hpp
test/: 02.noinclude.cpp  03.traverse.c  04.class.cpp  CMakeList.txt  CMakeLists.txt
test/06.exhaustive/: 06.exhaustive.cpp  a.cpp  a.hpp  main.cpp
test/unit/: CMakeLists.txt
test/unit/domain/: language.cpp  program.cpp  test_cfg_builder.cpp
test/unit/domain/cfg/: builder.cpp  cfg-builder.cpp  scopes.cpp  test_cfg_builder.cpp
test/unit/domain/cfg/block/: builder.cpp
test/unit/domain/cfg/scope/: builder.cpp
test/unit/domain/core/: 001-result.cpp  002-guard.cpp  003-aggregator.cpp  aggregator.cpp  compositor.cpp  guard.cpp  result.cpp
test/unit/domain/file/: file.cpp
test/unit/infra/adapters/filesystem/: file-reader.cpp
test/unit/infra/repositories/: cfg-parser-mock.hpp  repository-in-memory.cpp
test/unit/infra/services/parsers/clang/: clang-parser.cpp
